*  Thu Jul 03 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Added support to store the weights of MLP neural network in Little Endian bytes sequence

*  Tue Jul 01 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Replaced the MLPDataProvider's implementation of batch buffers from double-buffer to a buffer ring (eg. 8 buffers), more
      number of buffers will let the IO of the back-end data provider be completely hidden by the batch processing of the trainer.  

*  Fri Jun 27 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Fixed a bug in gotoLabelFrame() of MLPMNistDataProvider()
   -  Big hack to MLPDataProvider()/MLPMNistDataProvider()/MLPIFlyDataProvider(), removed the concept of "rounds", replaced 
       it by "epoch", resetDataProvider() added to restart the data provider between each epoches

*  Thu Jun 12 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Adjusted the API of MLPDataProvider, make batchAvailable() a public interface and add separate virtual private interface
      haveBatchToProvide() to be implemented by its derived class
   -  Fixed a bug in batchAvailable() and corresponding codes

*  Sun Jun 09 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Implemented an asynchronous checkpointing facility through a new class MLPCheckPointManager and some codes added
      in the MLPTrainer, MLPDataProvider

*  Fri Jun 06 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Made some change to the MLPNetProvider so that the configuration file names can be assigned by the user
   -  Removed the definition of "WIN32" and "Linux" from the project profile, using the compiler predefined definition
      "_WIN32" and "__linux" 

*  Sat May 31 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Implemented the MLP trainer/tester/dataprovider codes into a dynamic library on Windows 

*  Fri May 30 2014  Qianfeng Zhang  <qfzhanglinux@gmail.com>
   -  Verified the validity of IFlytek dataset